--- a/folder/landing_page.html
+++ b/folder/landing_page.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://use.fontawesome.com/9243569efd.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="/login/login_twitter.css">
+    <link rel="stylesheet" href="./home/css/landing_page.css">
     
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
     <title>Login Twitter</title>
@@ -37,6 +37,7 @@
                         <button class="btn outline"><a href="/loginRoute">Log In</a></button>
                     </div>
                     <h1>See what's happening in the world right now</h1><br>
+                    
                     <p>Join Twitter Today</p><br>
                     <a href="/signUpRoute"> <button class="btn primary block">Sign Up</button></a>
                     <a href="/loginRoute"> <button class="btn outline block">Log In</button></a>
