--- a/folder/landing_page.html
+++ b/folder/landing_page.html
@@ -41,6 +41,9 @@
                     <p>Join Twitter Today</p><br>
                     <a href="/signUpRoute"> <button class="btn primary block">Sign Up</button></a>
                     <a href="/loginRoute"> <button class="btn outline block">Log In</button></a>
+                    <a href="/updateUser"><button class="btn outline block">Update User</button></a>
+                    <a href="/deleteUser"> <button class="btn primary block">Delete User</button></a>
+
                     </div>
                 </div>
            
