--- a/folder/update.html
+++ b/folder/update.html
@@ -19,7 +19,7 @@
 
         <div class="main">
             <div class="form">
-                <form action="/updateUser" method="POST">
+                <form action="/update" method="POST">
                     <input type="text" class="username" placeholder="phone, email, or username " name="username"><br>
                     <input type="text" class="username" placeholder="phone, email, or username " name="newName"><br>
                 <input type="password" class="password" placeholder="Password" name="password"><br>
