--- a/folder/signup.html
+++ b/folder/signup.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="main">
-            <form class="formContainer" id="signupForm" method="POST" action="signupUser">
+            <form class="formContainer" id="signupForm" method="POST" action="/signupUser">
             <div class="form">
                 <input type="text" class="text" placeholder="phone, email, or username" name="username"><br>
                
